add logger config for debugging